Fix spacing issue with mobile Filter

--- a/src/assets/dashboard.css
+++ b/src/assets/dashboard.css
@@ -1,5 +1,8 @@
 @media only screen and (max-width: 1023px) {
 
+    #label{
+        margin-top:0px;
+    }
     .client_card{
         margin:0px 8%;
         -webkit-box-shadow: 3px 3px 3px 3px #ccc;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
@@ -76,8 +79,7 @@
     }
     #filter-wrapper{
         position: fixed;
-        padding:0px;
-        /* margin:5%; */
+        padding:20px 0px;
         height:100%;
         width:100%;
         background-color:rgb(255, 251, 251);
@@ -388,4 +390,28 @@ th span{
     width: 100%;
     height: 100%;
     background-color: rgba(0,0,0,0.3);
+  }
+
+  #margin div{
+      height:3vh;
+  }
+
+  #closeBtn{
+    background-color: rgba(14, 71, 112, .8);
+    color:#FFF9ec;
+	margin-bottom: -1em;
+	padding-left: 1.5em;
+	padding-right: 1.5em;
+	box-shadow: 0px 0px 25px -2px rgba(0,0,0,0.5);
+  }
+
+  #filter-label{
+      margin-top:5px;
+  }
+
+  #filter-checkbox{
+    -webkit-appearance: none;
+    float:right;
+    width:15px;
+    height:15px;   
   }
